available. Example:
   if succeeded ping then alert

New: Issue #915: Add support for sevice name regular expressions in  monit CLI status, summary, start,
stop, restart, unmonitor, monitor commands. Examples:
   monit status myservice  # exact match
   monit status "data.*"    # pattern which will match all services whos name contain "data" substring


Version 5.27.2

Fixed: Issue #931: The "if does exist" test with unmonitor or stop action didn't work properly.

Fixed: Issue #937: If the filesystem check uses mountpoint instead of device and multiple devices
are defined for the same filesystem with mismatch between /etc/mtab and device name in disk statistics
path, Monit reported error and disk activity was not reported.

Fixed: Issue #948: Cookie validation problem, Invalid CSRF Token, if the request is more then 1024 bytes.
Increased the request to 8kB.

Fixed: Disk activity statistics if procfs fallback was used instead of sysfs.

Fixed: LXC container: Monit may ignore the "start delay" option of the "set daemon" statement when the container
was rebooted, while the host was not rebooted (the LXC cotainer's boot time is not virtualized - it is inherited
from the host).

Changed: The debug mode no longer logs error about procfs /proc/<pid>/io and /proc/<pid>/fd open
errors, because if monit is not running as root, these errors are common as linux doesn't allo to
read these files if the process belongs to different user. These errors are logged only in extra
verbose mode (-vv option).


Version 5.27.1

Fixed: Issue #932: AssertException in "check program" if program does not exist. At the same
time this fix also require that executables mentioned in start/stop/restart/exec and check
program exist in the file system. Previously this only generated a warning.

Fixed: Issue #916: Linux: If monit 5.27.0 runs as non-root user, the promatch fails to find processes that belong to