@@ -33,6 +33,8 @@ stop, restart, unmonitor, monitor commands. Examples:
    monit status myservice  # exact match
    monit status "data.*"    # pattern which will match all services whos name contain "data" substring
 
+Fixed: Minor memory leak when uptime test is used an monit is reloaded.
+
 
 Version 5.27.2
 
